<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="UnusedResources">

    <!-- GENERAL -->
    <string name="cursor_moved">Cursor moved</string>
    <string name="samsung_disabled_custom_clipboard">Sorry, this feature is disabled on Android %1$s. Please use the Paste action instead.</string>
    <string name="accessibility_action_click_label">activate</string>

    <!-- LINK DIALOG -->
    <string name="link_dialog_title">Insert link</string>
    <string name="link_dialog_button_remove_link">Remove Link</string>
    <string name="link_dialog_edit_hint">http(s)://</string>
    <string name="link_dialog_button_ok">OK</string>
    <string name="link_dialog_button_cancel">Cancel</string>

    <!-- LINK DIALOG -->
    <string name="block_editor_dialog_button_save">Save</string>
    <string name="block_editor_dialog_button_cancel">Cancel</string>

    <!-- FORMAT -->
    <string name="format_bar_description_heading">Heading</string>
    <string name="format_bar_description_bold">Bold</string>
    <string name="format_bar_description_background">Background Color</string>
    <string name="format_bar_description_highlight">Highlight</string>
    <string name="format_bar_description_italic">Italic</string>
    <string name="format_bar_description_underline">Underline</string>
    <string name="format_bar_description_strike">Strikethrough</string>
    <string name="format_bar_description_redacted">Redacted</string>
    <string name="format_bar_description_align_left">Align Left</string>
    <string name="format_bar_description_align_right">Align Right</string>
    <string name="format_bar_description_align_center">Align Center</string>
    <string name="format_bar_description_quote">Block quote</string>
    <string name="format_bar_description_code">Code</string>
    <string name="format_bar_description_pre">Preformatted code</string>
    <string name="format_bar_description_link">Link</string>
    <string name="format_bar_description_horizontal_rule">Horizontal Rule</string>
    <string name="format_bar_description_media_normal">Show Media Options</string>
    <string name="format_bar_description_media_expanded">Hide Media Options</string>
    <string name="format_bar_description_list">List</string>
    <string name="format_bar_description_html">HTML</string>
    <string name="format_bar_description_ellipsis_collapse">Collapse Toolbar</string>
    <string name="format_bar_description_ellipsis_expand">Expand Toolbar</string>
    <string name="visual_editor">Visual toolbarActionListener</string>
    <string name="image_thumbnail">Image thumbnail</string>

    <!-- HEADING -->
    <string name="heading_1">Heading 1</string>
    <string name="heading_2">Heading 2</string>
    <string name="heading_3">Heading 3</string>
    <string name="heading_4">Heading 4</string>
    <string name="heading_5">Heading 5</string>
    <string name="heading_6">Heading 6</string>
    <string name="heading_default">Default</string>
    <string name="preformat">Preformat</string>

    <!-- LINK -->
    <string name="link_enter_url">URL</string>
    <string name="link_enter_url_text">Link text (optional)</string>
    <string name="create_a_link">Create a link</string>
    <string name="link_open_new_window">Open link in a new window/tab</string>

    <!-- MEDIA -->
    <string name="error_chooser_photo">No app was found to choose a photo</string>
    <string name="error_chooser_video">No app was found to choose a video</string>
    <string name="media_popup_gallery">Gallery</string>
    <string name="media_upload_dialog_message">Media must be uploaded before editing HTML.</string>
    <string name="media_upload_dialog_positive">OK</string>
    <string name="title_select_photo">Select Photo</string>
    <string name="title_select_video">Select Video</string>
    <string name="media_popup_take_photo">Take Photo</string>
    <string name="media_popup_take_video">Take Video</string>
    <string name="media_popup_gallery_chose_photo">Photo from device</string>
    <string name="media_popup_gallery_chose_video">Video from device</string>
    <string name="media_bar_description_gallery">Pick a media from gallery</string>
    <string name="media_bar_description_camera">Take Photo or Video with camera</string>
    <string name="media_item_content_description">Media</string>

    <!-- SHORTCUTS -->
    <string name="header_edit">Edit</string>
    <string name="header_format">Format</string>
    <string name="header_insert">Insert</string>
    <string name="item_edit_all">Select All</string>
    <string name="item_edit_copy">Copy</string>
    <string name="item_edit_cut">Cut</string>
    <string name="item_edit_paste">Paste</string>
    <string name="item_edit_redo">Redo</string>
    <string name="item_edit_undo">Undo</string>
    <string name="item_format_bold">Bold</string>
    <string name="item_format_code">Code</string>
    <string name="item_format_heading_1">Heading 1</string>
    <string name="item_format_heading_2">Heading 2</string>
    <string name="item_format_heading_3">Heading 3</string>
    <string name="item_format_heading_4">Heading 4</string>
    <string name="item_format_heading_5">Heading 5</string>
    <string name="item_format_heading_6">Heading 6</string>
    <string name="item_format_italic">Italic</string>
    <string name="item_format_list_no">No List</string>
    <string name="item_format_list_ordered">Ordered List</string>
    <string name="item_format_list_unordered">Unordered List</string>
    <string name="item_format_task_list">Task List</string>
    <string name="item_format_indent">Indent</string>
    <string name="item_format_outdent">Outdent</string>
    <string name="item_format_paragraph">Paragraph</string>
    <string name="item_format_preformatted">Preformatted</string>
    <string name="item_format_quote">Quote</string>
    <string name="item_format_strike">Strikethrough</string>
    <string name="item_format_underline">Underline</string>
    <string name="item_insert_link">Link</string>
    <string name="item_insert_media">Media</string>
    <string name="item_insert_more">Read More</string>
    <string name="item_insert_page">Page Break</string>
    <string name="key_multiple_alt">Alt</string>
    <string name="key_multiple_ctrl">Ctrl</string>
    <string name="key_single_1">1</string>
    <string name="key_single_2">2</string>
    <string name="key_single_3">3</string>
    <string name="key_single_4">4</string>
    <string name="key_single_5">5</string>
    <string name="key_single_6">6</string>
    <string name="key_single_7">7</string>
    <string name="key_single_8">8</string>
    <string name="key_single_a">A</string>
    <string name="key_single_b">B</string>
    <string name="key_single_c">C</string>
    <string name="key_single_d">D</string>
    <string name="key_single_i">I</string>
    <string name="key_single_k">K</string>
    <string name="key_single_l">L</string>
    <string name="key_single_m">M</string>
    <string name="key_single_o">O</string>
    <string name="key_single_p">P</string>
    <string name="key_single_q">Q</string>
    <string name="key_single_t">T</string>
    <string name="key_single_u">U</string>
    <string name="key_single_v">V</string>
    <string name="key_single_x">X</string>
    <string name="key_single_y">Y</string>
    <string name="key_single_z">Z</string>
    <string name="format_bar_button_highlight_path" translatable="false">M12.9 6h-2l-4 11h1.9l1.1-3h4.2l1.1 3h1.9L12.9 6zm-2.5 6.5l1.5-4.9 1.7 4.9h-3.2z</string>

</resources>
